resources/pacman/pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pacman-app
  name: pacman-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman-app
  strategy:
  template:
    metadata:
      labels:
        app: pacman-app
    spec:
    containers:
      - name: pacman-app
        image: "buniak/pacman"
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
