resources/pacman/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pacman-app
  name: pacman-svc
spec:
  ports:
  - name: pacman
    port: 8080
    protocol: TCP
  selector:
    app: pacman-app
