resources/pacman/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pacman-app
  name: pacman-route
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    name: pacman
  port:
    targetPort: 8080
